Fixed horizontal scroll CSS bug

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -1,4 +1,3 @@
-@import '../defaults.less';
 
 .head-panel {
   text-align: center;
@@ -29,7 +28,7 @@
 }
 
 .panel {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-flow: column nowrap;
